--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "danteandrinolo/danteandrinolo.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Dante"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "PhD Student at USC"
+  location         : "Los Angeles"
+  employer         : "University of Southern California"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "danteacanswers@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
