--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "danteandrinolo/danteandrinolo.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "20241112_171839.png"
   name             : "Dante Andrinolo"
   pronouns         : # example: "she/her"  
   bio              : "PhD Student at USC"
