--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,11 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articlesss'    
+    title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  thesis:
+    title: 'Thesis'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
