--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   avatar           : "20241112_171839.png"
   name             : "Dante Andrinolo"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student at USC"
-  location         : "Los Angeles"
-  employer         : "University of Southern California"
-  uri              : # URL
+  bio              : "Next: Electrical Engineering PhD Student at USC"
+  location         : "La Plata, Argentina"
+  employer         : "Universidad Nacional de La Plata"
+  uri              : "danteandrinolo/danteandrinolo.github.io"
   email            : "danteacanswers@gmail.com" 
 
   # Academic websites
