--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ author:
   avatar           : "20241112_171839.png"
   name             : "Dante Andrinolo"
   pronouns         : # example: "she/her"  
-  bio              : "Next: Electrical Engineering PhD Student at USC"
-  location         : "La Plata, Argentina"
-  employer         : "Universidad Nacional de La Plata"
+  bio              : "Electrical Engineering PhD Student at USC"
+  location         : "Los Angeles, California"
+  employer         : "Univerisity of Southern California"
   uri              : "danteandrinolo/danteandrinolo.github.io"
-  email            : "danteacanswers@gmail.com" 
+  email            : "andrinol@usc.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -67,7 +67,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : andrinoloD
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
